--- a/Sample2Client1/src/main/java/Sample1/KFrameWorkDesktopClass.form
+++ b/Sample2Client1/src/main/java/Sample1/KFrameWorkDesktopClass.form
@@ -53,6 +53,15 @@
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buyerItemActionPerformed"/>
                   </Events>
                 </MenuItem>
+                <MenuItem class="javax.swing.JMenuItem" name="countryandcurrItem">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Country &amp; Currency"/>
+                    <Property name="name" type="java.lang.String" value="countryandcurrItem" noResource="true"/>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="countryandcurrItemActionPerformed"/>
+                  </Events>
+                </MenuItem>
                 <MenuItem class="javax.swing.JMenuItem" name="fabricItem">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Fabric"/>
@@ -80,15 +89,6 @@
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="kontakItemActionPerformed"/>
                   </Events>
                 </MenuItem>
-                <MenuItem class="javax.swing.JMenuItem" name="matauangItem">
-                  <Properties>
-                    <Property name="text" type="java.lang.String" value="Mata Uang"/>
-                    <Property name="name" type="java.lang.String" value="matauangItem" noResource="true"/>
-                  </Properties>
-                  <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="matauangItemActionPerformed"/>
-                  </Events>
-                </MenuItem>
                 <MenuItem class="javax.swing.JMenuItem" name="mesinItem">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Mesin"/>
@@ -105,15 +105,6 @@
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mesintypeItemActionPerformed"/>
-                  </Events>
-                </MenuItem>
-                <MenuItem class="javax.swing.JMenuItem" name="negaraItem">
-                  <Properties>
-                    <Property name="text" type="java.lang.String" value="Negara"/>
-                    <Property name="name" type="java.lang.String" value="negaraItem" noResource="true"/>
-                  </Properties>
-                  <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="negaraItemActionPerformed"/>
                   </Events>
                 </MenuItem>
                 <MenuItem class="javax.swing.JMenuItem" name="sparepartItem">
