--- a/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/PurchaseOrder/PurchaseOrderEditDialogClass.form
+++ b/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/PurchaseOrder/PurchaseOrderEditDialogClass.form
@@ -617,10 +617,9 @@
                   <Font name="Verdana" size="10" style="0"/>
                 </Property>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="3">
-                    <StringItem index="0" value="30 days"/>
-                    <StringItem index="1" value="60 days"/>
-                    <StringItem index="2" value="120 days"/>
+                  <StringArray count="2">
+                    <StringItem index="0" value="IDR"/>
+                    <StringItem index="1" value="USD"/>
                   </StringArray>
                 </Property>
                 <Property name="name" type="java.lang.String" value="TermPaymentIDCombo" noResource="true"/>
