--- a/Sample2Client1/src/main/java/Sample1/KFrameWorkDesktopClass.form
+++ b/Sample2Client1/src/main/java/Sample1/KFrameWorkDesktopClass.form
@@ -223,6 +223,15 @@
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ProductInItemActionPerformed"/>
                   </Events>
                 </MenuItem>
+                <MenuItem class="javax.swing.JMenuItem" name="ProductOutItem">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Product Out"/>
+                    <Property name="name" type="java.lang.String" value="ProductOutItem" noResource="true"/>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ProductOutItemActionPerformed"/>
+                  </Events>
+                </MenuItem>
               </SubComponents>
             </Menu>
             <MenuItem class="javax.swing.JMenuItem" name="clientItem">
